[package]
name = "stable_node_set"
version = "0.1.0"
edition = "2021"

description = "An ordered set with handles to values."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/stable_node_set"

categories = ["data-structures"]
keywords = ["ordered", "set", "stable"]

[dependencies]
slotmap = "1.0.6"

[dev-dependencies]
rand = "0.8.5"
